linked while construction

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Thibaut Fatus</h1>
-<p></p>
+<p>You'll find me on <a href="https://www.linkedin.com/in/thibautfatus" target="_blank">LinkedIn</a></p>
 </body>
 </html>
